@@ -1,49 +1,0 @@
-MODULES2 =
-MODULES2 += setuptools-24.2.0.tar.gz
-MODULES2 += simplejson-3.8.2.tar.gz
-MODULES2 += texttable-0.8.7.tar.gz
-MODULES2 += ordereddict-1.1.tar.gz
-MODULES2 += weakrefset-1.0.0.tar.gz
-MODULES2 += pyexcel-io-0.3.2.tar.gz
-MODULES2 += pyexcel-0.4.3.tar.gz
-MODULES2 += odfpy-1.3.4.tar.gz
-MODULES2 += pyexcel-ods-0.3.0.tar.gz
-MODULES2 += jdcal-1.3.tar.gz
-MODULES2 += et_xmlfile-1.0.1.tar.gz
-MODULES2 += openpyxl-2.4.2.tar.gz
-MODULES2 += importlib-1.0.4.zip
-MODULES2 += argparse-1.4.0.tar.gz
-MODULES2 += future-0.16.0.tar.gz
-MODULES2 += xlwt-future-0.8.0.tar.gz
-MODULES2 += xlrd-1.0.0.tar.gz
-MODULES2 += xlwt-1.2.0.tar.gz
-MODULES2 += pyexcel-xlsx-0.3.0.tar.gz
-MODULES2 += pyexcel-xls-0.3.1.tar.gz
-MODULES2 += MarkupSafe-0.23.tar.gz
-MODULES2 += Jinja2-2.11.3.tar.gz
-MODULES2 += wstools-0.4.tar.gz
-MODULES2 += fpconst-0.7.2.tar.gz
-MODULES2 += docutils-0.12.tar.gz
-MODULES2 += SOAPpy-0.12.5.tar.gz
-MODULES2 += PyYAML-3.10.tar.gz
-MODULES2 += ecdsa-0.13.tar.gz
-MODULES2 += gearman-2.0.2.tar.gz
-MODULES2 += six-1.10.0.tar.gz
-MODULES2 += orderedmultidict-0.7.5.tar.gz
-MODULES2 += pycrypto-2.6.1.tar.gz
-MODULES2 += paramiko-1.18.2.tar.gz
-MODULES2 += pyasn1-0.4.8.tar.gz
-MODULES2 += ply-3.11.tar.gz
-MODULES2 += pysmi-0.3.4.tar.gz
-MODULES2 += pywbem-0.7.0.tar.gz
-MODULES2 += requests-2.10.0.tar.gz
-MODULES2 += prometheus_client-0.3.1.tar.gz
-MODULES2 += nagiosplugin-1.3.2.tar.gz
-MODULES2 += pysmbc-1.0.23.tar.gz
-MODULES2 += pyvmomi-6.7.1.2018.12.tar.gz
-MODULES2 += pycryptodomex-3.8.1.tar.gz
-MODULES2 += pysnmp-4.4.12.tar.gz
-MODULES2 += mysqlclient-1.3.12.tar.gz
-MODULES2 += pymssql-2.1.3.tar.gz
-MODULES2 += decorator-4.4.0.tar.gz
-MODULES2 += jsonpath-ng-1.4.3.tar.gz
